# mtcli-volume

./: .gitignore  .readthedocs.yaml  404.html  CHANGELOG_2.2.0.md  README.md  index.html  make.bat  mkdocs.yml  mtcli.ini  pyproject.toml  requirements.txt  search.html  setup.py
.github/workflows/: python-tests.yml
docs/: index.md  instalacao.md  uso.md
instalacao/: index.html
mtcli_volume/: cli.py  conf.py  controller.py  model.py  plugin.py  view.py  volume.py  volume_profile.py
mtcli_volume/commands/: volume.py  volume_cli.py
mtcli_volume/controllers/: volume_controller.py
mtcli_volume/models/: volume_model.py
mtcli_volume/views/: volume_view.py
mtcli_vprofile/: plugin.py  volume_profile.py  vprofile.py
search/: search_index.json
tests/: test_csv.py  test_plugin_csv.py  test_plugin_logs.py  test_plugin_volume.py  test_volume.py  test_volume_profile.py  test_vprofile.py  test_vprofile2.py
uso/: index.html
