[project]
name = "mtcli-volume"
version = "1.1.0"
description = "Plugin mtcli para exibir o volume profile"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14.0"
dependencies = [
    "mtcli>=1.18.1"
]

[project.urls]
homepage = "https://github.com/vfranca/mtcli-volume"
documentation = "https://mtcli-volume.readthedocs.io"
repository = "https://github.com/vfranca/mtcli-volume"
issues = "https://github.com/vfranca/mtcli-volume/issues"

[project.entry-points."mtcli.plugins"]
mtcli-volume = "mtcli_volume.plugin:volume"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.2.1"
black = "^25.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.pytest.ini_options]
addopts = "--cov=mtcli_volume --cov-report=html -ra -q"
