[project]
name = "mtcli-volume"
version = "1.7.0.dev0"
description = "Plugin mtcli para exibir o volume profile"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14.0"
dependencies = [
    "mtcli>=3.2.0"
]

[project.urls]
homepage = "https://github.com/vfranca/mtcli-volume"
documentation = "https://mtcli-volume.readthedocs.io"
repository = "https://github.com/vfranca/mtcli-volume"
issues = "https://github.com/vfranca/mtcli-volume/issues"

[project.entry-points."mtcli.plugins"]
mtcli_volume = "mtcli_volume.plugin:register"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.2.1"
black = "^25.1.0"
pytest-mock = "^3.15.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
