[project]
name = "mtcli-volume"
version = "2.4.0"
description = "Plugin mtcli para exibir o volume profile"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14.0"
dependencies = [
    "mtcli>=3.2.0",
    "click (>=8.3.0,<9.0.0)",
    "metatrader5 (>=5.0.5370,<6.0.0)",
    "tzdata (>=2025.2,<2026.0)"
]

[project.urls]
homepage = "https://github.com/vfranca/mtcli-volume"
documentation = "https://mtcli-volume.readthedocs.io"
repository = "https://github.com/vfranca/mtcli-volume"
issues = "https://github.com/vfranca/mtcli-volume/issues"

[project.entry-points."mtcli.plugins"]
mtcli_volume = "mtcli_volume.plugin:register"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.2.1"
pytest-mock = "^3.15.1"
ruff = "^0.14.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # Estilo
  "F",    # Lógica
  "B",    # Boas práticas
  "I",    # Imports
  "UP",   # Upgrade
  "N",    # Naming
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mtcli", "mtcli_volume"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
